llena las tablas de altas y bajas del requisito 1

--- a/src/com/sherwinca/rhu/formularios/Menu_Admin.form
+++ b/src/com/sherwinca/rhu/formularios/Menu_Admin.form
@@ -37,8 +37,8 @@
           <Group type="102" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
               <Component id="jLabel1" min="-2" pref="231" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="436" max="-2" attributes="0"/>
-              <Component id="jLabel2" min="-2" pref="158" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="364" max="-2" attributes="0"/>
+              <Component id="jLabel2" min="-2" pref="230" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -72,7 +72,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Rockwell Condensed" size="18" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="ADMINISTRADOR"/>
+        <Property name="text" type="java.lang.String" value="BIENVENIDOADMINISTRADOR"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
