Revert "se reestructuro el paquete llamado Clases: 	Clase jTable: metodos para mostrar registros a cualquier tabla, limpriar registros de tablas... 	clase generales: compararFechas,. Requisito #1: se muestra la info y algunas validaciones"
This reverts commit 9d964d27a8257487c110862397b895b077306e55.

--- a/src/com/sherwinca/rhu/formularios/Menu_Est.form
+++ b/src/com/sherwinca/rhu/formularios/Menu_Est.form
@@ -158,7 +158,7 @@
                                       <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace pref="690" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Component id="jButton4" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="jButton5" min="-2" max="-2" attributes="0"/>
@@ -190,7 +190,7 @@
                                   <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="inicioRot" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="finRot" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -204,21 +204,15 @@
                       <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" pref="123" max="-2" attributes="0"/>
-                      <EmptySpace pref="103" max="32767" attributes="0"/>
+                      <EmptySpace pref="105" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
           </Layout>
           <SubComponents>
             <Component class="com.toedter.calendar.JDateChooser" name="inicioRot">
-              <Properties>
-                <Property name="dateFormatString" type="java.lang.String" value="yyyy-MM-dd"/>
-              </Properties>
             </Component>
             <Component class="com.toedter.calendar.JDateChooser" name="finRot">
-              <Properties>
-                <Property name="dateFormatString" type="java.lang.String" value="yyyy-MM-dd"/>
-              </Properties>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane1">
               <AuxValues>
@@ -234,7 +228,7 @@
                         <Column editable="true" title="Nombre" type="java.lang.Object"/>
                         <Column editable="true" title="Apellidos" type="java.lang.Object"/>
                         <Column editable="true" title="Tipo de Rotacion" type="java.lang.Object"/>
-                        <Column editable="true" title="Observacion" type="java.lang.Object"/>
+                        <Column editable="true" title="Comentario" type="java.lang.Object"/>
                         <Column editable="true" title="Fecha" type="java.lang.Object"/>
                       </Table>
                     </Property>
@@ -326,7 +320,7 @@
                         <Column editable="true" title="Nombre" type="java.lang.Object"/>
                         <Column editable="true" title="Apellidos" type="java.lang.Object"/>
                         <Column editable="true" title="Tipo de Rotacion" type="java.lang.Object"/>
-                        <Column editable="true" title="Observacion" type="java.lang.Object"/>
+                        <Column editable="true" title="Comentarios" type="java.lang.Object"/>
                         <Column editable="true" title="Fecha" type="java.lang.Object"/>
                       </Table>
                     </Property>
